ido-tth/main/default/objects/tth_Loyalty_Event__c/tth_Loyalty_Event__c.object-meta.xml
<CustomObject>
    <description>Any type of event that is the cause for increment or decrement of loyalty points</description>
    <label>Loyalty Event</label>
    <nameField>
        <displayFormat>LEVT {0}</displayFormat>
        <label>Loyalty Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>