ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Amount__c.field-meta.xml
<CustomField>
    <fullName>tth_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many points is this event worth?</description>
    <label>Amount</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>