ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>tth_Event_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>What day did the event occur on?</description>
    <label>Event Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>