ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Note__c.field-meta.xml
<CustomField>
    <fullName>tth_Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>