ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Source__c.field-meta.xml
<CustomField>
    <fullName>tth_Source__c</fullName>
    <description>Where is this points event coming from?</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Loyalty_Event_Sources</valueSetName>
    </valueSet>
</CustomField>