ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Summary__c.field-meta.xml
<CustomField>
    <fullName>tth_Summary__c</fullName>
    <formula>HYPERLINK( Id, TEXT(tth_Type__c) + &#39; / &#39; + TEXT( tth_Amount__c ) + &#39; / &#39; + TEXT( tth_Source__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>