ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_Traveler__c</fullName>
    <description>Who is the primary traveler associated with this event</description>
    <label>Traveler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loyalty Events</relationshipLabel>
    <relationshipName>tth_Loyalty_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>