ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>tth_Trip__c</referenceTo>
    <relationshipLabel>Loyalty Events</relationshipLabel>
    <relationshipName>Loyalty_Events</relationshipName>
    <type>Lookup</type>
</CustomField>