ido-tth/main/default/objects/tth_Loyalty_Event__c/fields/tth_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_Type__c</fullName>
    <description>What type of event is this loyalty event?</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Loyalty_Event_Types</valueSetName>
    </valueSet>
</CustomField>